--- a/app.css
+++ b/app.css
@@ -4,25 +4,46 @@
 
 }
 
-:root {
+:root.dark {
   --navbar-font: "Poppins", sans-serif;
-  --navbar-background: #333333;
+  --navbar-background: rgb(17, 24, 39);
   --navbar-color: #ffffff;
+  --navbar-border: rgb(31, 41, 55);
   --change-mode: white;
-  --font-color: black;
+
+  --page-backgound:rgb(17, 24, 39);
+  --font-color: #f0f0f0;
+  
   --add-button-background: rgb(124, 89, 32);
   --add-button-hover-background: rgb(99, 69, 20);
   --add-button-color: white;
   --add-button-font: "Poppins", sans-serif;
+
   --books-font: 'Inter', sans-serif;
-  --books-background: #dee2e6;
-  --books-color: #0d3b66;
-  --formcontainer-width: 28em;
-  --formcontainer-height: 28em;
-  --form-border: rgb(229, 231, 235);
-  --button-background: rgb(124, 89, 32);
-  --button-hover-background: rgb(99, 69, 20);
-  --button-color: white;
+  --books-background: rgb(55, 65, 81, 0.5);
+  --books-border: rgb(51, 64, 81);
+  --books-color:white;
+}
+
+:root.light {
+  --navbar-font: "Poppins", sans-serif;
+  --navbar-background: rgb(249, 250, 251);
+  --navbar-color: #333333;
+  --navbar-border: #e6e6e6;
+  --change-mode: #333333;
+
+  --page-backgound:rgb(249, 250, 251);
+  --font-color: #333333;
+  
+  --add-button-background: rgb(124, 89, 32);
+  --add-button-hover-background: rgb(99, 69, 20);
+  --add-button-color: white;
+  --add-button-font: "Poppins", sans-serif;
+
+  --books-font: 'Inter', sans-serif;
+  --books-background: #fff;
+  --books-border: rgb(249, 250, 251);
+  --books-color:#333333;
 }
 
 /* container */
@@ -42,6 +63,7 @@ nav {
   height: 3rem;
   padding: 0 1rem;
   background-color: var(--navbar-background);
+  border-bottom: 1px solid var(--navbar-border);
 }
 
 ul {
@@ -60,9 +82,14 @@ li>a {
   text-decoration: none;
 }
 
+
 svg {
-  height: 50%;
+  height: 1.5rem;
   color: var(--change-mode);
+}
+
+svg:hover{
+  cursor: pointer;
 }
 
 h1 {
@@ -74,6 +101,8 @@ h1 {
 /* content */
 
 .content {
+  background-color: var(--page-backgound);
+  color: var(--font-color);
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -116,6 +145,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-top: 1px solid var(--navbar-border);
 }
 
 p>a {
@@ -128,15 +158,15 @@ p>a {
 .addedBooks>p {
   font-family: var(--books-font);
   text-transform: capitalize;
-  border-bottom: 1px solid var(--form-border);
   font-weight: 500;
   font-size: 1em;
   text-align: center;
-  padding-bottom: 0.5rem;
 }
 
+
 .addedBooks > * {
-  flex-grow: 1;
+  flex-grow: none;
+  flex-basis: 2rem;
 }
 
 .addedBooks span {
@@ -145,10 +175,10 @@ p>a {
 }
 
 .addedBooks {
-  width: 150px;
+  width: 200px;
   display: flex;
   flex-direction: column;
-  border: 1px solid var(--form-border);
+  border: 1px solid var(--books-border);
   padding: 1.5rem;
   background-color: var(--books-background);
   color: var(--books-color);
